<resources>
    <string name="app_name">weightTracker</string>
    <string name="quick_add_meal">Quick add meal</string>
    <string name="create_meal">Create meal</string>
    <string name="add_food_item">Add food item</string>
    <string name="brand_type">Brand/Type</string>
    <string name="units">Units</string>
    <string name="grams">grams</string>
    <string name="millilitres">millilitres</string>
    <string name="per_100g">Per 100g</string>
    <string name="kj">Kj</string>
    <string name="per_100_units">Per 100 units</string>
    <string name="enter">Enter</string>
    <string name="serving_size">Serving size</string>
    <string name="add_food_item_to_meal">Add new item</string>
    <string name="ml">mL</string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="brand_name">Brand name</string>
    <string name="search">Search:</string>
    <string name="search_term">search term</string>
    <string name="add_a_serving">Add one serving</string>
    <string name="serving_label">Serving label</string>
    <string name="sugar">Sugars</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="save_as_a_quick_meal">Save as a quick meal</string>
    <string name="energy">Energy</string>
    <string name="save_meal">save meal</string>
    <string name="record_as_a_meal">Record as a meal</string>
    <string name="user_profile">User profile</string>
    <string name="username">Username:</string>
    <string name="gregquinn">Greg Quinn</string>
    <string name="daily_energy_goal">Daily energy goal:</string>
    <string name="carbohydrate_raito">Carbohydrate ratio</string>
    <string name="user_profile_settings">User Profile Settings</string>
    <string name="_0">0</string>
    <string name="fat_ratio">Fat ratio: </string>
    <string name="protein_ratio">Protein ratio: </string>
    <string name="energy_units">Energy units: </string>
    <string name="calories">Calories</string>
    <string name="kilojoules">Kilojoules</string>
    <string name="target_weight_goal">Target weight goal: </string>
    <string name="friday_energy_goal">Friday Energy Goal</string>
    <string name="thursday_energy_goal">Thursday Energy Goal</string>
    <string name="saturday_energy_goal">Saturday Energy Goal</string>
    <string name="sunday_energy_goal">Sunday Energy Goal</string>
    <string name="wednesday_energy_goal">Wednesday Energy Goal</string>
    <string name="tuesday_energy_goal">Tuesday Energy Goal</string>
    <string name="monday_energy_goal">Monday Energy Goal</string>
    <string name="recipe_name">Recipe Name:</string>
    <string name="ingredients">Ingredients</string>
</resources>